--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
 			}
 		]
 	},
-	"main": "./extension.js",
+	"main": "./src/extension.js",
 	"scripts": {
 		"postinstall": "node ./node_modules/vscode/bin/install",
 		"test": "node ./node_modules/vscode/bin/test"
