fixes errors from marketplace and adds features: + Replace single project usage with issue id regex detection + Modified and add log information using vscode channel api + Fixes path errors when using windows + Adds remote loading of total ticket worklog

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,24 +5,20 @@
 {
 	"version": "0.2.0",
 	"configurations": [
-		{
-			"name": "Extension",
-			"type": "extensionHost",
-			"request": "launch",
-			"runtimeExecutable": "${execPath}",
-			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
-			]
-		},
-		{
-			"name": "Extension Tests",
-			"type": "extensionHost",
-			"request": "launch",
-			"runtimeExecutable": "${execPath}",
-			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}",
-				"--extensionTestsPath=${workspaceFolder}/test"
-			]
-		}
+	  {
+		"name": "Extension",
+		"type": "extensionHost",
+		"request": "launch",
+		"runtimeExecutable": "${execPath}",
+		"args": ["--extensionDevelopmentPath=${workspaceFolder}"]
+	  },
+	  {
+		"name": "Extension Tests",
+		"type": "extensionHost",
+		"request": "launch",
+		"runtimeExecutable": "${execPath}",
+		"args": ["--extensionDevelopmentPath=${workspaceFolder}", "--extensionTestsPath=${workspaceFolder}/test"]
+	  }
 	]
-}
+  }
+  
