--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,10 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es6",
-		"checkJs": false,  /* Typecheck .js files. */
-		"lib": [
-			"es6"
-		]
+	  "module": "commonjs",
+	  "target": "es6",
+	  "checkJs": false /* Typecheck .js files. */,
+	  "lib": ["es6"]
 	},
-	"exclude": [
-		"node_modules"
-	]
-}
+	"exclude": ["node_modules"]
+  }
+  
